--- a/index-two.html
+++ b/index-two.html
@@ -188,11 +188,11 @@
 <body>
 <div class="body-div">
 <div class="top-background-image-div">
-<img class="top-background-image" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/bg-hero-desktop.svg" alt="">
-<img class="logo" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/logo.svg" alt="">
+<img class="top-background-image" src="C:\Users\Callum\OneDrive - IT Professional Training/bg-hero-desktop.svg" alt="">
+<img class="logo" src="C:\Users\Callum\OneDrive - IT Professional Training/images/logo.svg" alt="">
 <a class="try-it-free" href="#">Try It Free</a>
 
-<img class="chat-image" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/illustration-mockups.svg" alt="">
+<img class="chat-image" src="C:\Users\Callum\OneDrive - IT Professional Training/illustration-mockups.svg" alt="">
 
 </div>
 
@@ -212,7 +212,7 @@
         <td><h1>Grow Together</h1>
         <h4>  Generate meaningful discussions with your audience and <br> build a strong, loyal community.
           Think of the insightful <br>conversations you miss out on with a feedback form.</h4></td>
-          <td>  <img class="grow-together-image" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/illustration-grow-together.svg" alt="">
+          <td>  <img class="grow-together-image" src="C:\Users\Callum\OneDrive - IT Professional Training/illustration-grow-together.svg" alt="">
             </td>
       </tr>
     </tbody>
@@ -225,7 +225,7 @@
   <table>
     <tbody>
       <tr>
-        <td>  <img class="flow-conv-image" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/illustration-flowing-conversation.svg" alt="">
+        <td>  <img class="flow-conv-image" src="C:\Users\Callum\OneDrive - IT Professional Training/illustration-flowing-conversation.svg" alt="">
           </td>
         <td><h1>Flowing Conversations</h1>
         <h4> You wouldn't paginate a conversation in real life, so why do <br>it online? Our threads
@@ -242,7 +242,7 @@
           <td><h1>Your Users</h1>
           <h4> It takes no time at all to integrate Huddle with your app's <br>authentication solution.
           This means, once signed in to <br>your app, your users can start chatting immediately.</h4></td>
-            <td>  <img class="your-users-image" src="file:///F:/Coding/code/huddle-landing-page-945317-master/huddle-landing-page-945317-master/images/illustration-your-users.svg" alt="">
+            <td>  <img class="your-users-image" src="C:\Users\Callum\OneDrive - IT Professional Training/illustration-your-users.svg" alt="">
               </td>
         </tr>
       </tbody>
